[package]
name = "git-report"
version = "0.1.0"
authors = ["Andrew O'Connor <andrew.oconnor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.14.4"
colored = "2.0.0"

[dev-dependencies]
tempfile = "3"