[package]
name = "git-report"
version = "0.1.0"
authors = ["Andrew O'Connor <andrew.oconnor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.16.1"
colored = "2.0.0"
clap = { version = "3.2.4", features = ["cargo"] }
anyhow = "1.0.71"

[dev-dependencies]
tempfile = "3"
